--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,11 @@ on:
       - main
 
 concurrency:
-  group: "${{ github.head_ref }}"
+  group: ${{ github.head_ref }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Print the head_ref
-        run: echo "The source branch is ${{ github.head_ref }}"
+        run: echo "The source branch is d"
