--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -9,7 +9,7 @@ jobs:
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.TELEGRAM_TO }}
+          to: ${{ secrets.TELEGRAM_CHAT }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             Commit message: ${{ github.event.commits[0].message }}
