--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -13,4 +13,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            Commit message: ${{ github.event.commits[0].message }}
+            Commit message
