--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -7,10 +7,13 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: send telegram message on push
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Commit message
+      - name: zxzxzxz
+        run: echo "${{ secrets.TELEGRAM_CHAT_ID }} - ${{ secrets.TELEGRAM_TOKEN }}"
+    # steps:
+    #   - name: send telegram message on push
+    #     uses: appleboy/telegram-action@master
+    #     with:
+    #       to: ${{ secrets.TELEGRAM_CHAT_ID }}
+    #       token: ${{ secrets.TELEGRAM_TOKEN }}
+    #       message: |
+    #         Commit message
