--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send telegram message
-        run: echo "ASAS" 
+        run: echo "${{ secrets.TELEGRAM_TOKEN }}" 
         # uses: appleboy/telegram-action@master
         # with:
         #   token: ${{ secrets.TELEGRAM_TOKEN }}
