--- a/.github/workflows/telegram.yml
+++ b/.github/workflows/telegram.yml
@@ -8,9 +8,11 @@ jobs:
   pr_opened:
     name: New PR notification
     runs-on: ubuntu-latest
+    permissions:
+      read
     steps:
       - name: Send telegram message
-        run: echo "${{ secrets.TELEGRAM_TOKEN }}" 
+        run: echo "${{ secrets.TELEGRAM_TOKEN }}"
         # uses: appleboy/telegram-action@master
         # with:
         #   token: ${{ secrets.TELEGRAM_TOKEN }}
