--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Run
         run: |-
-          echo "$LABEL_TO_REMOVE"
+          echo "${{ github.event.comment.issue_url }}"
