--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -56,6 +56,8 @@ jobs:
           python -m pip install poetry
           poetry install --only main
           poetry run python bin/website build --local ./poetry
+          ls -la poetry
+          printenv
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
