--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -1,11 +1,6 @@
 name: "Documentation Preview"
 
 on:
-  pull_request:
-    # allow repository maintainers to modify and test workflow
-    paths-ignore:
-      - "**"
-      - "!.github/workflows/docs.yml"
   pull_request_target:
     # enable runs for this workflow when labeled as documentation only
     # prevent execution when the workflow itself is modified from a fork
@@ -51,7 +46,7 @@ jobs:
           cat package.json
           npm ci && npm run prod
 
-      - name: Fetch Documentation
+      - name: Fetch Documentation!!!
         run: |
           python -m pip install poetry
           poetry install --only main
