--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -50,6 +50,7 @@ jobs:
           poetry install --only main
           poetry run python bin/website build --local ./poetry
           ls -la ./
+          cat config.toml
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
