--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -51,6 +51,7 @@ jobs:
           poetry run python bin/website build --local ./poetry
           ls -la ./
           cat config.toml
+          ls -la ./poetry
 
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
