--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -1,74 +1,39 @@
-name: "Documentation Preview"
+name: Base Image Release Build
 
+# Any change in triggers needs to be reflected in the concurrency group.
 on:
   pull_request_target:
-    # enable runs for this workflow when labeled as documentation only
-    # prevent execution when the workflow itself is modified from a fork
     types:
-      - labeled
+      - opened
       - synchronize
-    paths-ignore:
-      - "**"
-      - "!docs/**"
+      - reopened
+    paths:
+      - images/runtime/**
+      - images/builder/**
+
+permissions:
+  # To be able to access the repository with `actions/checkout`
+  contents: read
+  # Required to generate OIDC tokens for `sigstore/cosign-installer` authentication
+  id-token: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 
 jobs:
-  deploy:
-    name: Build & Deploy
-    runs-on: ubuntu-latest
-    if: |
-      (github.event_name == 'pull_request_target' && contains(github.event.pull_request.labels.*.name, 'impact/docs'))
-      || (github.event_name != 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository)
+  build-and-push:
+    timeout-minutes: 45
+    environment: release-base-images
+    runs-on: ubuntu-20.04
     steps:
-      - name: Checkout Website Source
-        uses: actions/checkout@v3
+      - name: Checkout Source Code
+        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
         with:
-          repository: python-poetry/website
-
-      - name: Checkout Poetry Source
-        uses: actions/checkout@v3
-        with:
-          path: poetry
+          persist-credentials: false
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Build Assets
+      - name: Update Runtime Image
         run: |
-          npm ci && npm run prod
-
-      - name: Fetch Documentation
-        run: |
-          python -m pip install poetry
-          poetry install --only main
-          poetry run python bin/website build --local ./poetry
-          ls -la ./
-          cat config.toml
-          ls -la ./poetry
-
-      - name: Install Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: '0.83.1'
-
-      - name: Build
-        run: hugo -v --minify
-
-      - name: Deploy
-        uses: amondnet/vercel-action@v25
-        id: vercel-action
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          scope: python-poetry
-          github-comment: true
-          working-directory: public
+          images/runtime/update-cilium-runtime-image.sh "sasa"
