--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -19,7 +19,7 @@ jobs:
   build-and-push:
     timeout-minutes: 45
     environment: release-base-images
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
