--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -1,32 +1,36 @@
-name: Base Image Release Build
+name: Self-hosted runner (push-caller)
 
-# Any change in triggers needs to be reflected in the concurrency group.
 on:
-  pull_request_target:
-    types:
-      - opened
-      - synchronize
-      - reopened
+  push:
+    branches:
+      - main
     paths:
-      - images/runtime/**
-      - images/builder/**
-
-permissions:
-  # To be able to access the repository with `actions/checkout`
-  contents: read
+      - "src/**"
+      - "tests/**"
+      - ".github/**"
+      - "templates/**"
+      - "utils/**"
 
 jobs:
-  build-and-push:
-    timeout-minutes: 45
-    environment: release-base-images
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Source Code
-        uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
-        with:
-          persist-credentials: false
-          ref: ${{ github.event.pull_request.head.sha }}
-
-      - name: Update Runtime Image
-        run: |
-          images/runtime/update-cilium-runtime-image.sh "sasa"
+  check-for-setup:
+      runs-on: ubuntu-latest
+      name: Check if setup was changed
+      outputs:
+        changed: ${{ steps.was_changed.outputs.changed }}
+      steps:
+        - uses: actions/checkout@v3
+          with: 
+            fetch-depth: "2"
+        
+        - name: Get changed files
+          id: changed-files
+          uses: tj-actions/changed-files@v22.2
+        
+        - name: Was setup changed 
+          id: was_changed
+          run: |
+            for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+              if [ `basename "${file}"` = "setup.py" ]; then
+                echo "changed=1" >> $GITHUB_OUTPUT
+              fi
+            done
