--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -1,25 +1,68 @@
+name: Prettier on Auto-merge
+
 on:
   pull_request_target:
-    types: [closed]
-name: Add merged PR and linked issues to current milestone of target branch
+    types: [auto_merge_enabled]
+  check_run:
+    types: [completed]
+  workflow_dispatch: {}
+
+permissions:
+  contents: write
+  pull-requests: read
+
 jobs:
-  AddMergedToCurrentMilestone:
-    if: github.event.pull_request.merged
+  prettier:
+    name: Run Prettier
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    # Only run if:
+    # 1. Triggered by auto_merge_enabled event, OR
+    # 2. Triggered by check_run completion where the check is "Prettier", failed, and PR has auto-merge enabled
+    # 3. Manually triggered via workflow_dispatch
+    if: |
+      github.event_name == 'workflow_dispatch' ||
+      github.event_name == 'pull_request_target' ||
+      (github.event_name == 'check_run' && 
+       github.event.check_run.name == 'Prettier' && 
+       github.event.check_run.conclusion == 'failure' &&
+       github.event.check_run.pull_requests != null &&
+       github.event.check_run.pull_requests[0] != null &&
+       github.event.check_run.pull_requests[0].auto_merge != null)
+    
     steps:
-      - uses: actions/checkout@v3
+      - name: Create access token for GitHub App
+        uses: actions/create-github-app-token@v2
+        id: app-token
         with:
-          ref: ${{ github.event.pull_request.base.ref }}
-      - id: get-current-milestone
+          app-id: ${{ vars.VERCEL_AI_SDK_GITHUB_APP_CLIENT_ID }}
+          private-key: ${{ secrets.VERCEL_AI_SDK_GITHUB_APP_PRIVATE_KEY_PKCS8 }}
+
+      - name: Get GitHub App User ID
+        id: app-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: Configure git user for GitHub App
         run: |
-            echo "current_milestone=v$(head -1 CHANGELOG.md | cut -d " " -f 2)" >> "$GITHUB_OUTPUT"
-      - run: echo ${{ steps.get-current-milestone.outputs.current_milestone }}
-      - id: get-milestone-id
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.app-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+
+      - name: Normalize pull_request.head
+        id: pr-head
         run: |
-          echo "milestone_id=$(curl -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/milestones | jq 'map(select(.title == "${{ steps.get-current-milestone.outputs.current_milestone }}"))[0].number')" >> "$GITHUB_OUTPUT"
-      - run: echo ${{ steps.get-milestone-id.outputs.milestone_id }}
-      - uses: breathingdust/current-milestone-action@v4
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          pull_number: ${{ github.event.pull_request.number }}
-          milestone_number: ${{ steps.get-milestone-id.outputs.milestone_id }}
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "sha=${{ github.event.workflow_run.head.sha }}" >> "$GITHUB_OUTPUT"
+            echo "ref=${{ github.event.workflow_run.head.ref }}" >> "$GITHUB_OUTPUT"
+            echo "repo_full_name=${{ github.event.workflow_run.head.repo.full_name }}" >> "$GITHUB_OUTPUT"
+          elif [[ "${{ github.event_name }}" == "pull_request_target" ]]; then
+            echo "sha=${{ github.event.pull_request.head.sha }}" >> "$GITHUB_OUTPUT"
+            echo "ref=${{ github.event.pull_request.head.ref }}" >> "$GITHUB_OUTPUT"
+            echo "repo_full_name=${{ github.event.pull_request.head.repo.full_name }}" >> "$GITHUB_OUTPUT"
+          else
+            # check_run event
+            echo "sha=${{ github.event.check_run.pull_requests[0].head.sha }}" >> "$GITHUB_OUTPUT"
+            echo "ref=${{ github.event.check_run.pull_requests[0].head.ref }}" >> "$GITHUB_OUTPUT"
+            echo "repo_full_name=${{ github.event.check_run.pull_requests[0].head.repo.full_name }}" >> "$GITHUB_OUTPUT"
+          fi
