--- a/.github/workflows/notification.yaml
+++ b/.github/workflows/notification.yaml
@@ -3,6 +3,9 @@ name: Prettier on Auto-merge
 on:
   pull_request_target:
     types: [auto_merge_enabled]
+  check_run:
+    types: [completed]
+  workflow_dispatch: {}
 
 permissions:
   contents: write
@@ -63,3 +66,22 @@ jobs:
             echo "ref=${{ github.event.check_run.pull_requests[0].head.ref }}" >> "$GITHUB_OUTPUT"
             echo "repo_full_name=${{ github.event.check_run.pull_requests[0].head.repo.full_name }}" >> "$GITHUB_OUTPUT"
           fi
+
+      - name: Checkout Repository
+        uses: actions/checkout@v5
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          ref: ${{ steps.pr-head.outputs.sha }}
+          repository: ${{ steps.pr-head.outputs.repo_full_name }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v5
+        with:
+          node-version: 20
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install
